--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,26 +1,3 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.info {
-    
-}
-
-.budget {
-
-}
-
-.optional {
-
-}
-
-.submit {
-    
-}
-
-
 body {
     background-color: rgb(255, 245, 157);
     margin: 0px;
@@ -107,6 +84,52 @@ h2 {
     border-radius: 5px;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.display {
+    display: flex;
+    height: 70px;
+    background-color: rgb(49, 47, 47, 0.2);
+
+}
+
+.display > .item {
+    height: 10px;
+    width: 120px;
+    text-align: center;
+}
+
+.message {
+    width: 100%;
+    text-align: center;
+    background-color: rgb(49, 47, 47, 0.2);
+}
+
+.inputItem {
+    padding: 5px;
+}
+
+.inputItem > div {
+    padding: 20px;
+    /* border: 1px solid black; */
+}
+
+.inputItem > label {
+    display: block;
+    width: 100%;
+}
+
+.updownbtn {
+    padding: 5px;
+    border: 1px solid black;
+    font-weight: bold;
+    border-radius: 5px;
+    background-color: rgb(254, 124, 0);
+}
 
 .footer-notes {
     display: block;
