--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,7 +114,7 @@ h2 {
 }
 
 .inputItem > div {
-    padding: 20px;
+    padding: 10px;
     /* border: 1px solid black; */
 }
 
@@ -126,9 +126,16 @@ h2 {
 .updownbtn {
     padding: 5px;
     border: 1px solid black;
-    font-weight: bold;
     border-radius: 5px;
     background-color: rgb(254, 124, 0);
+}
+
+.btn > button {
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: rgb(254, 124, 0);
+
 }
 
 .footer-notes {
