--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,7 @@ h2 {
     display: flex;
     height: 70px;
     background-color: rgb(49, 47, 47, 0.2);
+    padding-bottom: 10px;
 
 }
 
@@ -163,13 +164,8 @@ h2 {
 }
 
 #productItem {
-    overflow-y: auto;
+    overflow: auto;
     height: 300px;
-}
-
-
-.items {
-    
 }
 
 .footer-notes {
